Add detailed specifications and tasks for `DispatcherRuntime`, `MailboxRuntime`, and related components
- Extended specifications to outline the integration of `DispatcherRuntime`, `MailboxRuntime`, `MessageInvoker`, and `ReadyQueueCoordinator` into the actor system workflow.
- Defined responsibilities for `ExecutionRuntime` and `ExecutionRuntimeRegistry` to enable

--- a/specs/002-init-actor-lib/contracts/control-plane.yaml
+++ b/specs/002-init-actor-lib/contracts/control-plane.yaml
@@ -175,6 +175,7 @@ components:
         overflow:
           type: string
           enum: [DropNewest, DropOldest, Grow, Block]
+          description: Block は HostAsync ランタイム構成で AsyncQueue バックエンドを用いる場合のみ選択可能
         stashCapacity:
           type: integer
           minimum: 0
@@ -204,9 +205,10 @@ components:
         fairness:
           type: string
           enum: [RoundRobin, WorkStealing]
-        runtime:
+        mode:
           type: string
           enum: [CoreSync, HostAsync]
+          description: Block overflow を伴う MailboxPolicy を適用する場合は HostAsync モードを必須とする
     MailboxConfigResult:
       type: object
       required: [status, appliedPolicy, fairnessScore]
