Extend `clippy.toml` with ArcShared enforcement for `heapless::pool::arc::Arc`.

--- a/modules/utils-core/clippy.toml
+++ b/modules/utils-core/clippy.toml
@@ -3,4 +3,5 @@ disallowed-types = [
   { path = "std::sync::Arc", reason = "Use ArcShared within production code", replacement = "cellactor_utils_core_rs::sync::ArcShared" },
   { path = "alloc::rc::Rc", reason = "Use ArcShared within production code", replacement = "cellactor_utils_core_rs::sync::ArcShared" },
   { path = "std::rc::Rc", reason = "Use ArcShared within production code", replacement = "cellactor_utils_core_rs::sync::ArcShared" },
+  { path = "heapless::pool::arc::Arc", reason = "Use ArcShared within production code", replacement = "cellactor_utils_core_rs::sync::ArcShared" },
 ]
