Add example for `ArcShared` unsizing with nightly `unsize` feature
- Included sample code demonstrating `ArcShared<T>` to `ArcShared<dyn Trait>` coercion.
- Updated `Cargo.toml` with a new `unsize` feature and set as default on nightly.
- Added nightly-specific flags in `.cargo/config.toml` for `unsize` testing.
- Implemented `CoerceUnsized` for `ArcShared` under the `unsize` feature.
- Updated documentation and ensured compatibility with stable builds.

--- a/modules/utils-core/Cargo.toml
+++ b/modules/utils-core/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["alloc"]
+default = ["alloc", "unsize"]
 alloc = []
 interrupt-cortex-m = ["cortex-m"]
 force-portable-arc = []
+unsize = []
 
 [dependencies]
 async-trait = { workspace = true }
