--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -1,20 +1,28 @@
 [package]
-name = "cellactor-actor-core-rs"
+name = "actor-core"
 version = "0.1.0"
 edition = "2024"
-description = "no_std friendly utilities for Cell Actor"
+description = "Cellactor no_std actor runtime core"
 license = "MIT OR Apache-2.0"
-keywords = ["cellex", "actor", "utils", "no_std"]
+keywords = ["cellactor", "actor", "runtime", "no_std"]
 categories = ["concurrency", "embedded", "no-std"]
 repository = "https://github.com/j5ik2o/cellactor-rs"
+publish = false
+
+[features]
+default = []
+std = []
+alloc-metrics = []
 
 [dependencies]
 async-trait = { workspace = true }
-critical-section = { workspace = true, optional = false }
+cellactor-utils-core-rs = { workspace = true, features = ["alloc", "unsize"] }
+critical-section = { workspace = true }
+heapless = { workspace = true, default-features = false }
+portable-atomic = { workspace = true, features = ["critical-section"] }
+portable-atomic-util = { workspace = true, features = ["alloc"] }
 spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
-portable-atomic = { workspace = true, default-features = false, features = ["critical-section"] }
 cortex-m = { workspace = true, optional = true }
-cellactor-utils-core-rs = { path = "../utils-core" }
 
 [dev-dependencies]
 criterion = { workspace = true }
