Refactor imports for consistency and modularity; rename and integrate `cellactor-actor-core-rs` module; add `hashbrown` dependency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ libraries = [
 ]
 
 [workspace.dependencies]
-actor-core = { path = "modules/actor-core", default-features = false }
+cellactor-actor-core-rs = { path = "modules/actor-core", default-features = false }
 alloc-cortex-m = "0.4"
 async-trait = { version = "0.1.89", default-features = false }
 cellactor-utils-core-rs = { path = "modules/utils-core", default-features = false }
@@ -56,3 +56,4 @@ tokio-util = "0.7.16"
 tracing = { version = "0.1.41", default-features = false }
 tracing-subscriber = { version = "0.3", default-features = false }
 heapless = { version = "0.8", default-features = false }
+hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
