Replace `mod-reexport-lint` with `rustdoc-lint` in Cargo dependencies list

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ libraries = [
     { path = "lints/type-per-file-lint" },
     { path = "lints/tests-location-lint" },
     { path = "lints/use-placement-lint" },
-    { path = "lints/mod-reexport-lint" },
+    { path = "lints/rustdoc-lint" },
     { path = "lints/cfg-std-forbid-lint" },
 ]
 
