Add no_std Ping/Pong example with ActorSystem and reply handling
- Implemented a no_std Ping/Pong example using `AnyMessage` with `reply_to` routing.
- Added `StartPing`, `PingMessage`, and `PongReply` structures for message choreography.
- Enhanced actors to support state management and replies.
- Registered example in `Cargo.tom

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -27,3 +27,8 @@ hashbrown = { workspace = true, default-features = false }
 
 [dev-dependencies]
 criterion = { workspace = true }
+
+[[example]]
+name = "ping_pong_no_std"
+path = "examples/ping_pong_no_std/main.rs"
+required-features = ["std"]
