Add `DispatcherConfig` and validate Tokio runtime compatibility
- Introduced `DispatcherConfig` to configure dispatchers with custom executors.
- Added `examples/ping_pong_tokio` using `TokioExecutor` to validate ActorSystem functionality on Tokio with `std` enabled.
- Updated `Props` API with `with_dispatcher` for flexible dispatcher configuration.
- Ensured core crates maintain `no_std` compliance with Tokio dependency limited to examples.

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -27,8 +27,14 @@ hashbrown = { workspace = true, default-features = false }
 
 [dev-dependencies]
 criterion = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
 
 [[example]]
 name = "ping_pong_no_std"
 path = "examples/ping_pong_no_std/main.rs"
+required-features = ["std"]
+
+[[example]]
+name = "ping_pong_tokio"
+path = "examples/ping_pong_tokio/main.rs"
 required-features = ["std"]
