Implement EventStream, Deadletter handling, and LoggerSubscriber
- Added `EventStream` for buffer-based event publish/subscribe functionality.
- Implemented `Deadletter` store for tracking undeliverable messages with notifications.
- Introduced `LoggerSubscriber` to process log events via the `EventStream`.
- Updated `ActorSystem` to integrate event and deadletter handling.
- Enhanced mailbox with usage metrics and warning thresholds for capacity.

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -38,3 +38,8 @@ required-features = ["std"]
 name = "ping_pong_tokio"
 path = "examples/ping_pong_tokio/main.rs"
 required-features = ["std"]
+
+[[example]]
+name = "logger_subscriber_std"
+path = "examples/logger_subscriber_std/main.rs"
+required-features = ["std"]
