Add `deadletter_std` and `supervision_std` examples with enhanced EventStream usage
- Introduced `modules/actor-core/examples/deadletter_std/main.rs` to demonstrate handling of deadletters due to mailbox suspension or overflow.
- Added `modules/actor-core/examples/supervision_std/main.rs` to showcase actor supervision strategies with restart logic.
- Updated `Cargo.toml` to include the new examples under the `std` feature.
- Enhanced specifications and tasks to reference these examples for validation of advanced EventStream and logging features.

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -43,3 +43,13 @@ required-features = ["std"]
 name = "logger_subscriber_std"
 path = "examples/logger_subscriber_std/main.rs"
 required-features = ["std"]
+
+[[example]]
+name = "supervision_std"
+path = "examples/supervision_std/main.rs"
+required-features = ["std"]
+
+[[example]]
+name = "deadletter_std"
+path = "examples/deadletter_std/main.rs"
+required-features = ["std"]
