--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -53,3 +53,8 @@ required-features = ["std"]
 name = "deadletter_std"
 path = "examples/deadletter_std/main.rs"
 required-features = ["std"]
+
+[[example]]
+name = "named_actor_std"
+path = "examples/named_actor_std/main.rs"
+required-features = ["std"]
