--- a/modules/utils-core/Cargo.toml
+++ b/modules/utils-core/Cargo.toml
@@ -9,6 +9,7 @@ alloc = []
 interrupt-cortex-m = ["cortex-m"]
 force-portable-arc = []
 unsize = []
+std = ["alloc"]
 
 [dependencies]
 async-trait = { workspace = true }
