T001 ワークスペースのマニフェストを更新する (vibe-kanban 17e042ee)
modules/actor-core のフィーチャとデフォルト有効化フラグを公開する。対象: Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ libraries = [
 ]
 
 [workspace.dependencies]
-cellactor-actor-core-rs = { path = "modules/actor-core", default-features = false }
+cellactor-actor-core-rs = { path = "modules/actor-core" }
 alloc-cortex-m = "0.4"
 async-trait = { version = "0.1.89", default-features = false }
 cellactor-utils-core-rs = { path = "modules/utils-core", default-features = false }
