--- a/modules/actor-std/Cargo.toml
+++ b/modules/actor-std/Cargo.toml
@@ -6,15 +6,20 @@ description = "Cellactor std helpers for host runtimes"
 license = "MIT OR Apache-2.0"
 publish = false
 
+[features]
+default = []
+tokio-executor = ["dep:tokio"]
+
 [dependencies]
 cellactor-actor-core-rs = { path = "../actor-core" }
 cellactor-utils-core-rs = { path = "../utils-core", default-features = false }
 cellactor-utils-std-rs = { path = "../utils-std" }
-tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
+tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
 
 [[example]]
 name = "ping_pong_tokio"
 path = "examples/ping_pong_tokio/main.rs"
+required-features = ["tokio-executor"]
 
 [[example]]
 name = "logger_subscriber"
