feat(tests): add unit tests for ArcShared and RcShared implementations

--- a/modules/utils-core/Cargo.toml
+++ b/modules/utils-core/Cargo.toml
@@ -20,3 +20,4 @@ portable-atomic-util = { version = "0.2", default-features = false, features = [
 
 [dev-dependencies]
 criterion = { workspace = true }
+tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
