feat(tests): add unit tests for ActorSystem functionality and update config

--- a/.copilot/.copilot/config.json
+++ b/.copilot/.copilot/config.json
@@ -4,6 +4,8 @@
   "screen_reader": false,
   "theme": "auto",
   "trusted_folders": [
-    "/Users/j5ik2o/GolandProjects/cqrs-es-spec-kit-go"
-  ]
+    "/Users/j5ik2o/GolandProjects/cqrs-es-spec-kit-go",
+    "/Users/j5ik2o/Sources/cellactor-rs"
+  ],
+  "model": "claude-sonnet-4.5"
 }
