--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -32,4 +32,4 @@ tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
 
 [[example]]
 name = "ping_pong_no_std"
-path = "examples/ping_pong_no_std/main.rs"
+path = "examples/ping_pong/main.rs"
