feat: refactor typed actor API for improved type parameter consistency and clarity

--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -33,3 +33,7 @@ tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
 [[example]]
 name = "ping_pong_no_std"
 path = "examples/ping_pong_not_std/main.rs"
+
+[[example]]
+name = "typed_ping_pong_not_std"
+path = "examples/typed_ping_pong_not_std/main.rs"
