feat: implement unhandled message behavior and event for typed actor system

--- a/modules/actor-std/Cargo.toml
+++ b/modules/actor-std/Cargo.toml
@@ -36,3 +36,11 @@ path = "examples/dead_letter_std/main.rs"
 [[example]]
 name = "named_actor"
 path = "examples/named_actor_std/main.rs"
+
+[[example]]
+name = "behaviors_setup_receive"
+path = "examples/behaviors_setup_receive_std/main.rs"
+
+[[example]]
+name = "behaviors_unhandled"
+path = "examples/behaviors_unhandled_std/main.rs"
