--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,8 +47,10 @@ prost = "0.14.1"
 rp2040-boot2 = "0.3"
 rp2040-hal = { version = "0.11", default-features = false }
 rp235x-hal = { version = "0.3", default-features = false }
-serde = { version = "1.0.228", features = ["derive"] }
+serde = { version = "1.0.228", default-features = false, features = ["derive"] }
 serde_json = "1.0.145"
+erased-serde = { version = "0.3", default-features = false, features = ["alloc"] }
+bincode = { version = "2.0.1", default-features = false, features = ["alloc", "serde"] }
 spin = { version = "0.10", default-features = false }
 static_assertions = "1.1.0"
 static_cell = "2"
