--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -24,6 +24,9 @@ portable-atomic-util = { workspace = true, default-features = false, features = 
 spin = { workspace = true, default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable_atomic"] }
 cortex-m = { workspace = true, optional = true }
 hashbrown = { workspace = true, default-features = false }
+serde = { workspace = true }
+erased-serde = { workspace = true }
+bincode = { workspace = true }
 
 [dev-dependencies]
 cellactor-actor-std-rs = { path = "../actor-std" }
