--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -42,5 +42,9 @@ name = "typed_ping_pong_not_std"
 path = "examples/ping_pong_typed_not_std/main.rs"
 
 [[example]]
+name = "message_adapter_no_std"
+path = "examples/message_adapter_no_std/main.rs"
+
+[[example]]
 name = "behaviors_state_transition_typed_no_std"
 path = "examples/behaviors_state_transition_typed_no_std/main.rs"
