feat: enhance mailbox and dispatcher integration with error handling and configuration validation

--- a/modules/actor-std/Cargo.toml
+++ b/modules/actor-std/Cargo.toml
@@ -32,6 +32,7 @@ path = "examples/supervision_std/main.rs"
 [[example]]
 name = "deadletter"
 path = "examples/dead_letter_std/main.rs"
+required-features = ["tokio-executor"]
 
 [[example]]
 name = "named_actor"
