feat: add URI parser module and implement tests for RFC2396 compliance

--- a/.copilot/.copilot/config.json
+++ b/.copilot/.copilot/config.json
@@ -6,6 +6,7 @@
   "theme": "auto",
   "trusted_folders": [
     "/Users/j5ik2o/GolandProjects/cqrs-es-spec-kit-go",
-    "/Users/j5ik2o/Sources/fraktor-rs"
+    "/Users/j5ik2o/Sources/fraktor-rs",
+    "/Users/j5ik2o/Sources/cellactor-rs"
   ]
 }
