--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,31 +23,17 @@ jobs:
       packages: write
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
+          persist-credentials: false
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Setup Rust Toolchain
         uses: dtolnay/rust-toolchain@nightly
-
       - name: Configure Cargo Cache
         uses: Swatinem/rust-cache@v2
         with:
           shared-key: publish
-
-      - name: Verify Tag Matches Version
-        run: |
-          set -euo pipefail
-          CRATE_VERSION=$(cargo +nightly metadata --no-deps --format-version 1 | jq -r '.packages[] | select(.name=="fraktor-rs") | .version')
-          TAG_NAME="${GITHUB_REF_NAME}"
-          if [[ "${TAG_NAME}" != "v${CRATE_VERSION}" ]]; then
-            echo "Tag ${TAG_NAME} does not match Cargo.toml version ${CRATE_VERSION}." >&2
-            exit 1
-          fi
-
-      - name: Pre-release Health Check
-        run: ./scripts/ci-check.sh all
-
       - name: Publish to crates.io
         env:
           CARGO_TOKEN: ${{ secrets.CARGO_TOKEN }}
