--- a/modules/utils-std/Cargo.toml
+++ b/modules/utils-std/Cargo.toml
@@ -2,7 +2,14 @@
 name = "fraktor-utils-std-rs"
 version = "0.1.0"
 edition = "2024"
-publish = false
+description = "Standard-library helpers complementing fraktor-utils-core"
+license = "MIT OR Apache-2.0"
+homepage = "https://github.com/j5ik2o/fraktor-rs"
+repository = "https://github.com/j5ik2o/fraktor-rs"
+documentation = "https://docs.rs/fraktor-utils-std-rs"
+readme = "../../README.md"
+keywords = ["actors", "runtime", "std"]
+categories = ["concurrency"]
 
 [dependencies]
-fraktor-utils-core-rs = { path = "../utils-core" }
+fraktor-utils-core-rs = { path = "../utils-core", version = "0.1.0" }
