--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -46,7 +46,7 @@ jobs:
           tag-prefix: 'v'
           output-file: 'CHANGELOG.md'
           release-count: '0'
-          version-file: 'Cargo.toml'
+          version-file: 'Cargo.toml,modules/utils-core/Cargo.toml,modules/utils-std/Cargo.toml,modules/actor-core/Cargo.toml,modules/actor-std/Cargo.toml'
           version-path: 'package.version'
           skip-on-empty: 'true'
           skip-commit: ${{ inputs.dry_run }}
