--- a/modules/actor-std/Cargo.toml
+++ b/modules/actor-std/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fraktor-actor-std-rs"
-version = "0.1.1"
+version = "0.2.9"
 edition = "2024"
 description = "fraktor std helpers for host runtimes"
 license = "MIT OR Apache-2.0"
@@ -16,9 +16,9 @@ default = []
 tokio-executor = ["dep:tokio"]
 
 [dependencies]
-fraktor-actor-core-rs = { path = "../actor-core", version = "0.1.0" }
-fraktor-utils-core-rs = { path = "../utils-core", version = "0.1.0", default-features = false }
-fraktor-utils-std-rs = { path = "../utils-std", version = "0.1.0" }
+fraktor-actor-core-rs = { workspace = true }
+fraktor-utils-core-rs = { workspace = true, default-features = false }
+fraktor-utils-std-rs = { workspace = true }
 tokio = { workspace = true, optional = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
 
 [[example]]
