--- a/modules/actor-core/Cargo.toml
+++ b/modules/actor-core/Cargo.toml
@@ -33,6 +33,7 @@ bincode = { workspace = true }
 [dev-dependencies]
 criterion = { workspace = true }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
+proptest = "1.5"
 
 [[example]]
 name = "ping_pong_not_std"
